@@ -383,7 +383,7 @@
 						</control>
 					</control>
 				</itemlayout>
-				<itemlayout height="360" width="350" condition="Container.Content(artists) | Container.Content(albums) | Container.Content(songs) | Container.Content(livetv)">
+				<itemlayout height="360" width="350" condition="Container.Content(artists) | Container.Content(albums) | Container.Content(songs) | Container.Content(actors) | Container.Content(directors) | Container.Content(livetv)">
 					<control type="image">
 						<left>1</left>
 						<top>10</top>
@@ -840,7 +840,7 @@
 						</control>
 					</control>
 				</focusedlayout>
-				<focusedlayout height="360" width="350" condition="Container.Content(artists) | Container.Content(albums) | Container.Content(songs) | Container.Content(livetv)">
+				<focusedlayout height="360" width="350" condition="Container.Content(artists) | Container.Content(albums) | Container.Content(songs) | Container.Content(actors) | Container.Content(directors) | Container.Content(livetv)">
 					<control type="group">
 						<animation effect="slide" start="0,0" end="-40,0" time="300">Focus</animation>
 						<animation effect="slide" start="-40,0" end="0,0" time="125">UnFocus</animation>
@@ -1092,6 +1092,29 @@
 								<label fallback="-">$INFO[ListItem.Property(Duration)]</label>
 							</control>
 						</control>
+						<control type="group">
+							<visible>Container.Content(actors) | Container.Content(directors)</visible>
+							<top>20</top>
+							<control type="image">
+								<top>0</top>
+								<left>0</left>
+								<width>70</width>
+								<height>32</height>
+								<fadetime>500</fadetime>
+								<aspectratio align="center">keep</aspectratio>
+								<texture>globalsearch-list-number.png</texture>
+							</control>
+							<control type="label">
+								<left>0</left>
+								<top>35</top>
+								<width>70</width>
+								<height>32</height>
+								<align>center</align>
+								<font>font25_narrow</font>
+								<selectedcolor>FFF0F0F0</selectedcolor>
+								<label fallback="-">$INFO[ListItem.Label2]</label>
+							</control>
+						</control>
 					</control>
 				</focusedlayout>
 			</control>
@@ -1189,6 +1212,17 @@
 						<shadowcolor>22000000</shadowcolor>
 						<visible>Container.Content(livetv)</visible>
 					</control>
+					<control type="label">
+						<left>110</left>
+						<top>45</top>
+						<height>50</height>
+						<width>928</width>
+						<aligny>center</aligny>
+						<font>font27</font>
+						<label>$INFO[ListItem.Label2]</label>
+						<shadowcolor>22000000</shadowcolor>
+						<visible>Container.Content(actors) | Container.Content(directors)</visible>
+					</control>
 				</itemlayout>
 				<focusedlayout height="100" width="1458">
 					<control type="image">
@@ -1281,6 +1315,17 @@
 						<label>$INFO[ListItem.Property(Starttime)]</label>
 						<shadowcolor>22000000</shadowcolor>
 						<visible>Container.Content(livetv)</visible>
+					</control>
+					<control type="label">
+						<left>110</left>
+						<top>45</top>
+						<height>50</height>
+						<width>928</width>
+						<aligny>center</aligny>
+						<font>font27</font>
+						<label>$INFO[ListItem.Label2]</label>
+						<shadowcolor>22000000</shadowcolor>
+						<visible>Container.Content(actors) | Container.Content(directors)</visible>
 					</control>
 				</focusedlayout>
 			</control>
